# strongswan

./: configure.ac
conf/: strongswan.conf.5.main
conf/plugins/: bypass-lan.opt
man/: ipsec.conf.5.in
src/libcharon/plugins/eap_radius/: eap_radius_accounting.c
src/libcharon/plugins/smp/: smp.c
src/libcharon/plugins/sql/: sql_config.c
src/libcharon/plugins/stroke/: stroke_socket.c
src/libcharon/plugins/vici/: README.md  vici_config.c  vici_control.c
src/libcharon/sa/: ike_sa_manager.c
src/libcharon/sa/ikev2/: keymat_v2.c
src/libhydra/plugins/kernel_pfkey/: kernel_pfkey_ipsec.c
src/libpts/pts/: pts_dh_group.c
src/libstrongswan/: Makefile.am
src/libstrongswan/asn1/: asn1_parser.c
src/libstrongswan/plugins/: plugin_loader.c
src/libstrongswan/plugins/cmac/: Makefile.am
src/libstrongswan/plugins/constraints/: Makefile.am
src/libstrongswan/plugins/gmp/: gmp_rsa_private_key.c  gmp_rsa_public_key.c
src/libstrongswan/plugins/hmac/: Makefile.am
src/libstrongswan/plugins/nonce/: Makefile.am
src/libstrongswan/plugins/openssl/: Makefile.am
src/libstrongswan/plugins/pem/: Makefile.am
src/libstrongswan/plugins/pgp/: Makefile.am
src/libstrongswan/plugins/random/: Makefile.am
src/libstrongswan/plugins/revocation/: Makefile.am
src/libstrongswan/plugins/sqlite/: Makefile.am
src/libstrongswan/plugins/x509/: Makefile.am  x509_cert.c
src/libstrongswan/plugins/xcbc/: Makefile.am
src/libstrongswan/utils/: identification.c  identification.h  settings.c
src/libstrongswan/utils/utils/: memory.h
src/pki/commands/: dn.c  issue.c
testing/tests/tnc/tnccs-20-hcd-eap/: description.txt
